--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         align-items: center;
         font-family: Arial, Helvetica, sans-serif;
       }
+      p {
+        margin: 0;
+      }
       .hexagon-container {
         position: relative;
         width: 34rem;
