--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+        box-sizing: border-box;
       }
       .hexagon {
         position: absolute;
